fixing wierd UI Bugs on iphone devices

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -16,6 +16,10 @@
   font-size: 50px;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 .tile-text {
   margin: 0;
   padding-top: 10px;
