--- a/src/app/truckload/truckload.page.scss
+++ b/src/app/truckload/truckload.page.scss
@@ -37,9 +37,9 @@
 .content {
     min-height: 100%;
     height: auto;
-    width: 100%;
+    width: 100%; 
     padding-top: 10px;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     background-color: #07263b;
 }
 
